--- a/style.css
+++ b/style.css
@@ -94,3 +94,14 @@ input{
  margin-top: 0.4vw;
  cursor:pointer;
 }
+
+.task{
+  color:white;
+  padding:0.4vw;
+  cursor:grab; 
+  color:black;
+  border-radius:6px;
+  background-color:rgb(160, 239, 220);
+  margin-top:1vw; width:95%;
+  margin-left:0.6vw
+}
